objects/Annual_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Pricing</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Letter Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greeting__c</fullName>
        <defaultValue>&apos;Dear Sir/Madam&apos;</defaultValue>
        <label>Greeting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_group_of_companies__c</fullName>
        <label>Name of group of companies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_holding_company__c</fullName>
        <label>Name of holding company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Annual Pricings</relationshipLabel>
        <relationshipName>Annual_Pricings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Year__c</fullName>
        <formula>TEXT(VALUE(Pricing_Template__r.Year__c) - 1)</formula>
        <label>Previous Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pricing Template</label>
        <referenceTo>Pricing_Template__c</referenceTo>
        <relationshipLabel>Annual Pricings</relationshipLabel>
        <relationshipName>Annual_Pricings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Show_Previous_Comparative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Previous Comparative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Annual_Pricings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Annual_Pricings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>The_Signer_Role_1__c</fullName>
        <defaultValue>&apos;Coverage Support Manager&apos;</defaultValue>
        <label>The Signer Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>The_Signer_Role_2__c</fullName>
        <defaultValue>&apos;Relationship Executive&apos;</defaultValue>
        <label>The Signer Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Pricing_Template__r.Year__c</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Annual Pricing</label>
    <listViews>
        <fullName>All_Pending_Annual_Pricings</fullName>
        <columns>NAME</columns>
        <columns>Organisation__c</columns>
        <columns>Pricing_Template__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>All Pending Annual Pricings</label>
    </listViews>
    <listViews>
        <fullName>My_Annual_Pricings</fullName>
        <columns>NAME</columns>
        <columns>Organisation__c</columns>
        <columns>Pricing_Template__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Annual Pricings</label>
    </listViews>
    <listViews>
        <fullName>My_Pending_Annual_Pricings</fullName>
        <columns>NAME</columns>
        <columns>Organisation__c</columns>
        <columns>Pricing_Template__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>My Pending Annual Pricings</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Annual Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Pricings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>